src/jdmn-js-runtime/parser/FEELParser.js
// Generated from FEELParser.g4 by ANTLR 4.10.1
// jshint ignore: start
import antlr4 from "antlr4";




const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class FEELParser extends antlr4.Parser {

    static grammarFileName = "FEELParser.g4";
    static literalNames = [ null, null, null, null, null, null, null, null, 
        "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", 
        "'-'", "'*'", "'/'", "'**'", "'..'", "'.'", 
        "','", "'('", "')'", "'['", "']'", "'{'", "'}'", 
        "':'", "'->'", "'not'", "'true'", "'false'", 
        "'null'", "'function'", "'external'", "'for'", 
        "'in'", "'return'", "'if'", "'then'", "'else'", 
        "'some'", "'every'", "'satisfies'", "'and'", 
        "'or'", "'between'" ];
    static symbolicNames = [ null, "BLOCK_COMMENT", "LINE_COMMENT", "WS", 
        "STRING", "NUMBER", "TEMPORAL", "EQ", "NE", 
        "LT", "GT", "LE", "GE", "PLUS", "MINUS", "STAR", 
        "FORWARD_SLASH", "STAR_STAR", "DOT_DOT", "DOT", 
        "COMMA", "PAREN_OPEN", "PAREN_CLOSE", "BRACKET_OPEN", 
        "BRACKET_CLOSE", "BRACE_OPEN", "BRACE_CLOSE", 
        "COLON", "ARROW", "NOT", "TRUE", "FALSE", "NULL", 
        "FUNCTION", "EXTERNAL", "FOR", "IN", "RETURN", 
        "IF", "THEN", "ELSE", "SOME", "EVERY", "SATISFIES", 
        "AND", "OR", "BETWEEN", "INSTANCE_OF", "NAME" ];
    static ruleNames = [ "unaryTestsRoot", "expressionRoot", "textualExpressionsRoot", 
        "boxedExpressionRoot", "unaryTests", "positiveUnaryTests", 
        "positiveUnaryTest", "opRel", "simplePositiveUnaryTest", 
        "interval", "intervalStartPar", "intervalEndPar", 
        "endpoint", "expression", "textualExpressions", 
        "textualExpression", "functionDefinition", "formalParameter", 
        "forExpression", "iterationDomain", "ifExpression", 
        "quantifiedExpression", "disjunction", "conjunction", 
        "comparison", "arithmeticExpression", "addition", 
        "multiplication", "exponentiation", "arithmeticNegation", 
        "instanceOf", "type", "postfixExpression", "parameters", 
        "namedParameters", "parameterName", "positionalParameters", 
        "primaryExpression", "simpleValue", "qualifiedName", 
        "literal", "simpleLiteral", "stringLiteral", "booleanLiteral", 
        "numericLiteral", "boxedExpression", "list", "context", 
        "contextEntry", "key", "dateTimeLiteral", "identifier" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = FEELParser.ruleNames;
        this.literalNames = FEELParser.literalNames;
        this.symbolicNames = FEELParser.symbolicNames;


    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 31:
    	    		return this.type_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
        }
    }

    type_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return "range" == (localctx.typeName===null ? null : this._input.getText(new antlr4.Interval(localctx.typeName.start,localctx.typeName.stop))) || "list" == (localctx.typeName===null ? null : this._input.getText(new antlr4.Interval(localctx.typeName.start,localctx.typeName.stop)));
    		case 1:
    			return "context" == (localctx.typeName===null ? null : this._input.getText(new antlr4.Interval(localctx.typeName.start,localctx.typeName.stop)));
    		case 2:
    			return "function" == (localctx.typeName===null ? null : this._input.getText(new antlr4.Interval(localctx.typeName.start,localctx.typeName.stop)));
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    }




    unaryTestsRoot() {
	    let localctx = new UnaryTestsRootContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, FEELParser.RULE_unaryTestsRoot);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 104;
	        this.unaryTests();
	        this.state = 105;
	        this.match(FEELParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    expressionRoot() {
	    let localctx = new ExpressionRootContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, FEELParser.RULE_expressionRoot);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 107;
	        this.expression();
	        this.state = 108;
	        this.match(FEELParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    textualExpressionsRoot() {
	    let localctx = new TextualExpressionsRootContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, FEELParser.RULE_textualExpressionsRoot);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 110;
	        this.textualExpressions();
	        this.state = 111;
	        this.match(FEELParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    boxedExpressionRoot() {
	    let localctx = new BoxedExpressionRootContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, FEELParser.RULE_boxedExpressionRoot);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 113;
	        this.boxedExpression();
	        this.state = 114;
	        this.match(FEELParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    unaryTests() {
	    let localctx = new UnaryTestsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, FEELParser.RULE_unaryTests);
	    try {
	        this.state = 123;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 116;
	            this.match(FEELParser.NOT);
	            this.state = 117;
	            this.match(FEELParser.PAREN_OPEN);
	            this.state = 118;
	            this.positiveUnaryTests();
	            this.state = 119;
	            this.match(FEELParser.PAREN_CLOSE);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 121;
	            this.positiveUnaryTests();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 122;
	            this.match(FEELParser.MINUS);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    positiveUnaryTests() {
	    let localctx = new PositiveUnaryTestsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, FEELParser.RULE_positiveUnaryTests);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 125;
	        this.positiveUnaryTest();
	        this.state = 130;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===FEELParser.COMMA) {
	            this.state = 126;
	            this.match(FEELParser.COMMA);
	            this.state = 127;
	            this.positiveUnaryTest();
	            this.state = 132;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    positiveUnaryTest() {
	    let localctx = new PositiveUnaryTestContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, FEELParser.RULE_positiveUnaryTest);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 133;
	        this.expression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    opRel() {
	    let localctx = new OpRelContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, FEELParser.RULE_opRel);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 135;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << FEELParser.EQ) | (1 << FEELParser.NE) | (1 << FEELParser.LT) | (1 << FEELParser.GT) | (1 << FEELParser.LE) | (1 << FEELParser.GE))) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    simplePositiveUnaryTest() {
	    let localctx = new SimplePositiveUnaryTestContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, FEELParser.RULE_simplePositiveUnaryTest);
	    try {
	        this.state = 141;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case FEELParser.EQ:
	        case FEELParser.NE:
	        case FEELParser.LT:
	        case FEELParser.GT:
	        case FEELParser.LE:
	        case FEELParser.GE:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 137;
	            this.opRel();
	            this.state = 138;
	            this.endpoint();
	            break;
	        case FEELParser.PAREN_OPEN:
	        case FEELParser.BRACKET_OPEN:
	        case FEELParser.BRACKET_CLOSE:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 140;
	            this.interval();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    interval() {
	    let localctx = new IntervalContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, FEELParser.RULE_interval);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 143;
	        this.intervalStartPar();
	        this.state = 144;
	        this.endpoint();
	        this.state = 145;
	        this.match(FEELParser.DOT_DOT);
	        this.state = 146;
	        this.endpoint();
	        this.state = 147;
	        this.intervalEndPar();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    intervalStartPar() {
	    let localctx = new IntervalStartParContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, FEELParser.RULE_intervalStartPar);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 149;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << FEELParser.PAREN_OPEN) | (1 << FEELParser.BRACKET_OPEN) | (1 << FEELParser.BRACKET_CLOSE))) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    intervalEndPar() {
	    let localctx = new IntervalEndParContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, FEELParser.RULE_intervalEndPar);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 151;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << FEELParser.PAREN_CLOSE) | (1 << FEELParser.BRACKET_OPEN) | (1 << FEELParser.BRACKET_CLOSE))) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    endpoint() {
	    let localctx = new EndpointContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, FEELParser.RULE_endpoint);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 153;
	        this.expression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    expression() {
	    let localctx = new ExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, FEELParser.RULE_expression);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 155;
	        this.textualExpression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    textualExpressions() {
	    let localctx = new TextualExpressionsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, FEELParser.RULE_textualExpressions);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 157;
	        this.textualExpression();
	        this.state = 162;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===FEELParser.COMMA) {
	            this.state = 158;
	            this.match(FEELParser.COMMA);
	            this.state = 159;
	            this.textualExpression();
	            this.state = 164;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    textualExpression() {
	    let localctx = new TextualExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, FEELParser.RULE_textualExpression);
	    try {
	        this.state = 169;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case FEELParser.FOR:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 165;
	            this.forExpression();
	            break;
	        case FEELParser.IF:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 166;
	            this.ifExpression();
	            break;
	        case FEELParser.SOME:
	        case FEELParser.EVERY:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 167;
	            this.quantifiedExpression();
	            break;
	        case FEELParser.STRING:
	        case FEELParser.NUMBER:
	        case FEELParser.TEMPORAL:
	        case FEELParser.EQ:
	        case FEELParser.NE:
	        case FEELParser.LT:
	        case FEELParser.GT:
	        case FEELParser.LE:
	        case FEELParser.GE:
	        case FEELParser.MINUS:
	        case FEELParser.PAREN_OPEN:
	        case FEELParser.BRACKET_OPEN:
	        case FEELParser.BRACKET_CLOSE:
	        case FEELParser.BRACE_OPEN:
	        case FEELParser.NOT:
	        case FEELParser.TRUE:
	        case FEELParser.FALSE:
	        case FEELParser.NULL:
	        case FEELParser.FUNCTION:
	        case FEELParser.AND:
	        case FEELParser.OR:
	        case FEELParser.NAME:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 168;
	            this.disjunction();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    functionDefinition() {
	    let localctx = new FunctionDefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, FEELParser.RULE_functionDefinition);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 171;
	        this.match(FEELParser.FUNCTION);
	        this.state = 172;
	        this.match(FEELParser.PAREN_OPEN);
	        this.state = 181;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(((((_la - 29)) & ~0x1f) == 0 && ((1 << (_la - 29)) & ((1 << (FEELParser.NOT - 29)) | (1 << (FEELParser.FUNCTION - 29)) | (1 << (FEELParser.AND - 29)) | (1 << (FEELParser.OR - 29)) | (1 << (FEELParser.NAME - 29)))) !== 0)) {
	            this.state = 173;
	            this.formalParameter();
	            this.state = 178;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===FEELParser.COMMA) {
	                this.state = 174;
	                this.match(FEELParser.COMMA);
	                this.state = 175;
	                this.formalParameter();
	                this.state = 180;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 183;
	        this.match(FEELParser.PAREN_CLOSE);
	        this.state = 186;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===FEELParser.COLON) {
	            this.state = 184;
	            this.match(FEELParser.COLON);
	            this.state = 185;
	            this.type();
	        }

	        this.state = 189;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===FEELParser.EXTERNAL) {
	            this.state = 188;
	            this.match(FEELParser.EXTERNAL);
	        }

	        this.state = 191;
	        this.expression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    formalParameter() {
	    let localctx = new FormalParameterContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, FEELParser.RULE_formalParameter);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 193;
	        this.parameterName();
	        this.state = 196;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===FEELParser.COLON) {
	            this.state = 194;
	            this.match(FEELParser.COLON);
	            this.state = 195;
	            this.type();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    forExpression() {
	    let localctx = new ForExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, FEELParser.RULE_forExpression);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 198;
	        this.match(FEELParser.FOR);
	        this.state = 199;
	        this.identifier();
	        this.state = 200;
	        this.match(FEELParser.IN);
	        this.state = 201;
	        this.iterationDomain();
	        this.state = 209;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===FEELParser.COMMA) {
	            this.state = 202;
	            this.match(FEELParser.COMMA);
	            this.state = 203;
	            this.identifier();
	            this.state = 204;
	            this.match(FEELParser.IN);
	            this.state = 205;
	            this.iterationDomain();
	            this.state = 211;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 212;
	        this.match(FEELParser.RETURN);
	        this.state = 213;
	        this.expression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    iterationDomain() {
	    let localctx = new IterationDomainContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, FEELParser.RULE_iterationDomain);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 215;
	        this.expression();
	        this.state = 218;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===FEELParser.DOT_DOT) {
	            this.state = 216;
	            this.match(FEELParser.DOT_DOT);
	            this.state = 217;
	            this.expression();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    ifExpression() {
	    let localctx = new IfExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, FEELParser.RULE_ifExpression);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 220;
	        this.match(FEELParser.IF);
	        this.state = 221;
	        this.expression();
	        this.state = 222;
	        this.match(FEELParser.THEN);
	        this.state = 223;
	        this.expression();
	        this.state = 224;
	        this.match(FEELParser.ELSE);
	        this.state = 225;
	        this.expression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    quantifiedExpression() {
	    let localctx = new QuantifiedExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, FEELParser.RULE_quantifiedExpression);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 227;
	        _la = this._input.LA(1);
	        if(!(_la===FEELParser.SOME || _la===FEELParser.EVERY)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 228;
	        this.identifier();
	        this.state = 229;
	        this.match(FEELParser.IN);
	        this.state = 230;
	        this.expression();
	        this.state = 237;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 29)) & ~0x1f) == 0 && ((1 << (_la - 29)) & ((1 << (FEELParser.NOT - 29)) | (1 << (FEELParser.FUNCTION - 29)) | (1 << (FEELParser.AND - 29)) | (1 << (FEELParser.OR - 29)) | (1 << (FEELParser.NAME - 29)))) !== 0)) {
	            this.state = 231;
	            this.identifier();
	            this.state = 232;
	            this.match(FEELParser.IN);
	            this.state = 233;
	            this.expression();
	            this.state = 239;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 240;
	        this.match(FEELParser.SATISFIES);
	        this.state = 241;
	        this.expression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    disjunction() {
	    let localctx = new DisjunctionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, FEELParser.RULE_disjunction);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 243;
	        this.conjunction();
	        this.state = 248;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,13,this._ctx);
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 244;
	                this.match(FEELParser.OR);
	                this.state = 245;
	                this.conjunction(); 
	            }
	            this.state = 250;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,13,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }



    conjunction() {
	    let localctx = new ConjunctionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 46, FEELParser.RULE_conjunction);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 251;
	        this.comparison();
	        this.state = 256;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,14,this._ctx);
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 252;
	                this.match(FEELParser.AND);
	                this.state = 253;
	                this.comparison(); 
	            }
	            this.state = 258;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,14,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
    }


